--- a/buttons/voltar.html
+++ b/buttons/voltar.html
@@ -52,6 +52,6 @@
 </head>
 <body>
     <h1>Obrigado por clicar no link!</h1>
-    <h2><a href="../index.html">Voltar</a></h2>
+    <h2><a href="https://davimatos05.github.io/projeto-rede-social/" target="_self">Voltar</a></h2>
 </body>
 </html>
